[博客]：调整样式

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   "爱音乐，爱电影，爱生活，iOS Developer"
 
 
-domain: "http://neebel.github.io"
+domain: "http://neebel.cn"
 base: ""
 
 # Source URL NOTE: end with / cause it's [URL + FILE]
